<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dialog_button_margin"
        android:paddingLeft="@dimen/margin_10unit"
        android:paddingRight="@dimen/margin_10unit"
        android:paddingTop="@dimen/dialog_button_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="audio.mpe"
                android:textSize="@dimen/detail_title_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/path_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="3"
                android:textSize="@dimen/detail_value_textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/size_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="@dimen/detail_value_textsize"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/extension"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/extention_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="@dimen/detail_value_textsize"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="@dimen/detail_value_textsize"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/duration_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="@dimen/detail_value_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resolution_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_item_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/resolution"
                android:textSize="@dimen/detail_value_textsize" />

            <TextView
                android:id="@+id/resolution_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="@dimen/detail_value_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dialog_button_margin"
            android:layout_marginTop="@dimen/dialog_button_margin"
            android:text="OK"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/detail_title_textsize" />
    </LinearLayout>
</FrameLayout>